# plugin.video.nhkworldtv

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  Pipfile  Pipfile2.7  Pipfile3.8  README.md  TEST_COVERAGE.md  addon.xml  changelog.txt  default.py  main.py  package-lock.json  package.json  playwright-mcp-config.json  playwright.config.ts  pyproject.toml  pytest.ini  readme.md  test_empty_episodes.py  test_programs_api.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: addon-checker.yml  addon_repo_push.yml  addon_submit.yml  codeql-analysis.yml  readme.md  release.yml  submit_addon.yml  unittests.yml
docs/: DEPENDENCIES.md  DEVELOPMENT.md  README.md  REPO_UPDATE_SUMMARY.md  SUBMISSION.md  build.md
lib/: api_json.js  api_keys.py  cache_api.py  episode.py  kodiutils.py  nhk_api.py  nhk_api_parser.py  plugin.py  routing.py  utils.py
libs/: main.py  utils.py
libs/tests/: test_lib_main.py
local_build/: build.sh
plugin.video.nhkworldtv/: .kodiignore  addon.xml  addon_template.xml  main.py
plugin.video.nhkworldtv/lib/: api.json  api_current.json  api_keys.py  ataglance.py  cache_api.py  episode.py  first_run_wizard.py  kodiutils.py  news_programs.py  nhk_api.py  nhk_api_parser.py  plugin.py  topstories.py  url.py  utils.py  vod.py
plugin.video.nhkworldtv/resources/: settings.xml
plugin.video.nhkworldtv/resources/language/resource.language.en_gb/: strings.po
plugin.video.nhkworldtv/tests/: conftest.py  integration_test_nhk_api.py  test_categories_fix.py  test_integration_nhk_api.py  test_lib_ataglance.py  test_lib_cache.py  test_lib_episode.py  test_lib_first_run_wizard.py  test_lib_kodiutils.py  test_lib_news_programs.py  test_lib_nhk_api.py  test_lib_nhk_api_parser.py  test_lib_plugin.py  test_lib_plugin_ataglance.py  test_lib_plugin_helpers.py  test_lib_plugin_live_schedule.py  test_lib_plugin_live_stream.py  test_lib_plugin_news_programs.py  test_lib_plugin_play_news_item.py  test_lib_plugin_top_stories.py  test_lib_plugin_vod episode.py  test_lib_plugin_vod.py  test_lib_plugin_vod_episode.py  test_lib_plugin_vod_lists.py  test_lib_topstories.py  test_lib_url.py  test_lib_utils.py  test_lib_vod.py
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
resources/lib/: kodilogging.py  nhk_api.py  plugin.py  utils.py
tests/: analyze_nhk_api.spec.ts  test_lib_episode.py  test_lib_nhk_api.py  test_lib_nhk_api_parser.py  test_lib_plugin.py  test_lib_plugin_ataglance.py  test_lib_plugin_live_schedule.py  test_lib_plugin_live_stream.py  test_lib_plugin_play_news_item.py  test_lib_plugin_topstories.py  test_lib_plugin_vod.py  test_lib_utils.py
